added improved validator/documentation
