# project_management_api/src/routes/userRoute.js
@@ -2,13 +2,14 @@ import express from 'express';
 import { getAllUsersHandler, getUserByIdHandler, createUserHandler, updateUserHandler, deleteUserHandler } from '../controllers/userController.js';
 import { authenticate } from '../middleware/authenticate.js';
 import { authorizeRoles } from '../middleware/authorizeRoles.js';
+import { validateResourceId } from '../middleware/resourceIdValidator.js';
 
 const router = express.Router();
 
 router.get('/', authenticate, authorizeRoles('ADMIN'), getAllUsersHandler);
-router.get('/:id', authenticate, getUserByIdHandler);
+router.get('/:id', authenticate, validateResourceId, getUserByIdHandler);
 router.post('/', authenticate, authorizeRoles('ADMIN'), createUserHandler);
-router.put('/:id', authenticate, updateUserHandler);
-router.delete('/:id', authenticate, authorizeRoles('ADMIN'), deleteUserHandler);
+router.put('/:id', authenticate, validateResourceId, updateUserHandler);
+router.delete('/:id', authenticate, authorizeRoles('ADMIN'), validateResourceId, deleteUserHandler);
 
 export default router;
